[metadata]
name = chain-factory
version = 0.0.5
author = llxp (https://github.com/llxp/)
author_email = 	info@llxp.de
license = GPL-3.0-or-later
description = A framework to build and orchestrate workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/llxp/chain-factory
project_urls =
    Bug Tracker = https://github.com/llxp/chain-factory/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src